--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 		"react-native": "0.46.4",
 		"react-native-linear-gradient": "^2.1.0",
 		"react-native-svg": "^5.3.2",
+		"react-native-svg-uri": "^1.2.0",
+		"react-native-swiper": "^1.5.4",
 		"react-navigation": "^1.0.0-beta.11"
 	},
 	"devDependencies": {
