--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"apsl-react-native-button": "^3.1.0",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.46.4",
 		"react-native-linear-gradient": "^2.1.0",
