--- a/package.json
+++ b/package.json
@@ -8,13 +8,21 @@
 	},
 	"dependencies": {
 		"apsl-react-native-button": "^3.1.0",
+		"prop-types": "^15.5.10",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.46.4",
+		"react-native-blur": "^3.1.3",
+		"react-native-deprecated-custom-components": "^0.1.1",
 		"react-native-linear-gradient": "^2.1.0",
+		"react-native-navbar": "^1.8.0",
+		"react-native-sortable-listview": "^0.2.4",
 		"react-native-svg": "^5.3.2",
 		"react-native-svg-uri": "^1.2.0",
 		"react-native-swiper": "^1.5.4",
-		"react-navigation": "^1.0.0-beta.11"
+		"react-native-vector-icons": "^4.3.0",
+		"react-navigation": "^1.0.0-beta.11",
+		"react-redux": "^5.0.6",
+		"redux": "^3.7.2"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
