--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"apsl-react-native-button": "^3.1.0",
+		"connected-react-router": "^4.2.3",
 		"prop-types": "^15.5.10",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.46.4",
@@ -15,6 +16,7 @@
 		"react-native-deprecated-custom-components": "^0.1.1",
 		"react-native-linear-gradient": "^2.1.0",
 		"react-native-navbar": "^1.8.0",
+		"react-native-router-flux": "^4.0.0-beta.21",
 		"react-native-sortable-listview": "^0.2.4",
 		"react-native-svg": "^5.3.2",
 		"react-native-svg-uri": "^1.2.0",
